--- a/AddressBook/AddressBook.csproj
+++ b/AddressBook/AddressBook.csproj
@@ -211,8 +211,13 @@
     <Compile Include="Migrations\201711072133573_AddPhoneNumberModel.Designer.cs">
       <DependentUpon>201711072133573_AddPhoneNumberModel.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711072201567_AddEmailAddressModel.cs" />
+    <Compile Include="Migrations\201711072201567_AddEmailAddressModel.Designer.cs">
+      <DependentUpon>201711072201567_AddEmailAddressModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Contact.cs" />
+    <Compile Include="Models\EmailAddress.cs" />
     <Compile Include="Models\EntityBaseModel.cs" />
     <Compile Include="Models\PhoneNumber.cs" />
     <Compile Include="ViewModels\AccountViewModels.cs" />
@@ -369,6 +374,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711072133573_AddPhoneNumberModel.resx">
       <DependentUpon>201711072133573_AddPhoneNumberModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711072201567_AddEmailAddressModel.resx">
+      <DependentUpon>201711072201567_AddEmailAddressModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
