--- a/AddressBook/AddressBook.csproj
+++ b/AddressBook/AddressBook.csproj
@@ -193,13 +193,14 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\ContactsController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="DataAccessLayer\AddressBookDbContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\HtmlHelperExtensions.cs" />
+    <Compile Include="Helpers\Params.cs" />
     <Compile Include="Migrations\201711052203387_AddressBookDbContext.cs" />
     <Compile Include="Migrations\201711052203387_AddressBookDbContext.Designer.cs">
       <DependentUpon>201711052203387_AddressBookDbContext.cs</DependentUpon>
@@ -254,6 +255,7 @@
     <Content Include="Content\Libraries\css\sb-admin.css" />
     <Content Include="Content\Libraries\css\sb-admin.min.css" />
     <Content Include="Content\Libraries\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\ProfilePictures\person_profile.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -366,6 +368,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Contacts\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
