--- a/AddressBook/AddressBook.csproj
+++ b/AddressBook/AddressBook.csproj
@@ -199,6 +199,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\AppMethods.cs" />
     <Compile Include="Helpers\HtmlHelperExtensions.cs" />
     <Compile Include="Helpers\Params.cs" />
     <Compile Include="Migrations\201711052203387_AddressBookDbContext.cs" />
@@ -229,6 +230,10 @@
     <Compile Include="Migrations\201711092031184_AddCreatedAtToUser.Designer.cs">
       <DependentUpon>201711092031184_AddCreatedAtToUser.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711092210459_AddRelationshipToContactModel.cs" />
+    <Compile Include="Migrations\201711092210459_AddRelationshipToContactModel.Designer.cs">
+      <DependentUpon>201711092210459_AddRelationshipToContactModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Contact.cs" />
@@ -238,6 +243,7 @@
     <Compile Include="Models\PhoneNumber.cs" />
     <Compile Include="ViewModels\AccountViewModels.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
+    <Compile Include="ViewModels\ContactViewModels.cs" />
     <Compile Include="ViewModels\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -404,6 +410,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711092031184_AddCreatedAtToUser.resx">
       <DependentUpon>201711092031184_AddCreatedAtToUser.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711092210459_AddRelationshipToContactModel.resx">
+      <DependentUpon>201711092210459_AddRelationshipToContactModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
