--- a/AddressBook/AddressBook.csproj
+++ b/AddressBook/AddressBook.csproj
@@ -193,12 +193,14 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
-    <Compile Include="Controllers\ContactsController.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="DataAccessLayer\AddressBookDbContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\AppConfiguration.cs" />
     <Compile Include="Helpers\AppMethods.cs" />
     <Compile Include="Helpers\HtmlHelperExtensions.cs" />
     <Compile Include="Helpers\Params.cs" />
@@ -233,6 +235,10 @@
     <Compile Include="Migrations\201711092210459_AddRelationshipToContactModel.cs" />
     <Compile Include="Migrations\201711092210459_AddRelationshipToContactModel.Designer.cs">
       <DependentUpon>201711092210459_AddRelationshipToContactModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201711092215496_AddDefaultPropertyToAddress.cs" />
+    <Compile Include="Migrations\201711092215496_AddDefaultPropertyToAddress.Designer.cs">
+      <DependentUpon>201711092215496_AddDefaultPropertyToAddress.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Address.cs" />
@@ -374,6 +380,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\Base\" />
     <Folder Include="Views\Contacts\" />
   </ItemGroup>
   <ItemGroup>
@@ -413,6 +420,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711092210459_AddRelationshipToContactModel.resx">
       <DependentUpon>201711092210459_AddRelationshipToContactModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711092215496_AddDefaultPropertyToAddress.resx">
+      <DependentUpon>201711092215496_AddDefaultPropertyToAddress.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
