--- a/AddressBook/AddressBook.csproj
+++ b/AddressBook/AddressBook.csproj
@@ -343,6 +343,8 @@
     <Content Include="Scripts\Libraries\sb-admin-datatables.min.js" />
     <Content Include="Scripts\Libraries\sb-admin.js" />
     <Content Include="Scripts\Libraries\sb-admin.min.js" />
+    <Content Include="Scripts\Libraries\mustache.js" />
+    <Content Include="Scripts\Web\Home\index.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -384,7 +386,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Scripts\Web\" />
     <Folder Include="Views\Base\" />
   </ItemGroup>
   <ItemGroup>
