Remove Group Type from Group model

--- a/AddressBook/AddressBook.csproj
+++ b/AddressBook/AddressBook.csproj
@@ -242,6 +242,10 @@
     <Compile Include="Migrations\201711092215496_AddDefaultPropertyToAddress.Designer.cs">
       <DependentUpon>201711092215496_AddDefaultPropertyToAddress.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201711112349252_RemoveGroupTypeFromGroupModel.cs" />
+    <Compile Include="Migrations\201711112349252_RemoveGroupTypeFromGroupModel.Designer.cs">
+      <DependentUpon>201711112349252_RemoveGroupTypeFromGroupModel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Contact.cs" />
@@ -432,6 +436,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201711092215496_AddDefaultPropertyToAddress.resx">
       <DependentUpon>201711092215496_AddDefaultPropertyToAddress.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201711112349252_RemoveGroupTypeFromGroupModel.resx">
+      <DependentUpon>201711112349252_RemoveGroupTypeFromGroupModel.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
