--- a/AddressBook/AddressBook.csproj
+++ b/AddressBook/AddressBook.csproj
@@ -262,6 +262,8 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\Libraries\css\gijgo.css" />
+    <Content Include="Content\Libraries\css\gijgo.min.css" />
     <Content Include="Content\Libraries\css\global.css" />
     <Content Include="Content\Libraries\css\bootstrap-grid.css" />
     <Content Include="Content\Libraries\css\bootstrap-grid.min.css" />
@@ -280,6 +282,7 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\file-processing.js" />
     <Content Include="Scripts\global.js" />
     <Content Include="Scripts\Libraries\bootstrap.bundle.js" />
     <Content Include="Scripts\Libraries\bootstrap.bundle.min.js" />
@@ -334,6 +337,8 @@
     <Content Include="Content\Libraries\scss\sb-admin.scss" />
     <None Include="Scripts\Libraries\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\Libraries\dataTables.bootstrap4.js" />
+    <Content Include="Scripts\Libraries\gijgo.js" />
+    <Content Include="Scripts\Libraries\gijgo.min.js" />
     <Content Include="Scripts\Libraries\jquery-1.10.2.js" />
     <Content Include="Scripts\Libraries\jquery-1.10.2.min.js" />
     <None Include="Scripts\Libraries\jquery.validate-vsdoc.js" />
