--- a/AddressBook/Web.config
+++ b/AddressBook/Web.config
@@ -27,7 +27,8 @@
     </httpModules>
   <httpHandlers>
          <add path="routes.axd" verb="GET,HEAD" type="MvcCodeRouting.RouteDebugHandler, MvcCodeRouting" />
-      </httpHandlers></system.web>
+      </httpHandlers>
+  </system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
