--- a/AddressBook/AddressBook.csproj
+++ b/AddressBook/AddressBook.csproj
@@ -411,6 +411,7 @@
     <Content Include="Views\Shared\_Header.cshtml" />
     <Content Include="Views\Contacts\_Create.cshtml" />
     <Content Include="Views\Contacts\_Edit.cshtml" />
+    <Content Include="Views\Contacts\_Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
