--- a/AddressBook/AddressBook.csproj
+++ b/AddressBook/AddressBook.csproj
@@ -412,6 +412,7 @@
     <Content Include="Views\Contacts\_Create.cshtml" />
     <Content Include="Views\Contacts\_Edit.cshtml" />
     <Content Include="Views\Contacts\_Details.cshtml" />
+    <Content Include="Views\Contacts\_Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
