--- a/AddressBook/Web.config
+++ b/AddressBook/Web.config
@@ -10,7 +10,8 @@
   </configSections>
   <connectionStrings>
     <!-- Development -->
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\AddressBook.mdf;Initial Catalog=AddressBook;Integrated Security=True" providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\AddressBook.mdf;Initial Catalog=AddressBook;Integrated Security=True" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=ROBI-PC\SQLEXPRESS_2014;Initial Catalog=AddressBook;Persist Security Info=True;User ID=sa;Password=Sql123;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -36,6 +37,10 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
+    <staticContent>
+      <mimeMap fileExtension="woff" mimeType="application/font-woff" />
+      <mimeMap fileExtension="woff2" mimeType="application/font-woff" />
+    </staticContent>
   <handlers>
          <add name="MvcCodeRouting.RouteDebugHandler" path="routes.axd" verb="GET,HEAD" type="MvcCodeRouting.RouteDebugHandler, MvcCodeRouting" />
       </handlers></system.webServer>
