Minify global and file-processing scripts

--- a/AddressBook/AddressBook.csproj
+++ b/AddressBook/AddressBook.csproj
@@ -287,7 +287,9 @@
     <Content Include="Content\Libraries\css\toastr.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\Web\file-processing.min.js" />
     <Content Include="Scripts\Web\file-processing.js" />
+    <Content Include="Scripts\Web\global.min.js" />
     <Content Include="Scripts\Web\global.js" />
     <Content Include="Scripts\Libraries\bootstrap.bundle.js" />
     <Content Include="Scripts\Libraries\bootstrap.bundle.min.js" />
