Remove production string from web.config

--- a/AddressBook/Web.config
+++ b/AddressBook/Web.config
@@ -10,8 +10,8 @@
   </configSections>
   <connectionStrings>
     <!-- Development -->
-    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\AddressBook.mdf;Initial Catalog=AddressBook;Integrated Security=True" providerName="System.Data.SqlClient" />-->
-    <add name="DefaultConnection" connectionString="Data Source=ROBI-PC\SQLEXPRESS_2014;Initial Catalog=AddressBook;Persist Security Info=True;User ID=sa;Password=Sql123;" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\AddressBook.mdf;Initial Catalog=AddressBook;Integrated Security=True" providerName="System.Data.SqlClient" />
+    
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
